Загрузочный экран начало

--- a/sections/preloader.html
+++ b/sections/preloader.html
@@ -1,6 +1,57 @@
 <!-- ==================== ПРЕЛОАДЕР ==================== -->
 <!-- Загрузочный экран со слоганом САФУ -->
 <div class="preloader">
+
+    <!-- Все декоративные элементы в одном слое — плавно появляются вместе -->
+    <div class="preloader__decor-layer" aria-hidden="true">
+
+        <!-- Фоновые надписи с наклоном -->
+        <span class="preloader__bg-text preloader__bg-text--safu">САФУ</span>
+        <span class="preloader__bg-text preloader__bg-text--ismart">ИСМАРТ</span>
+        <span class="preloader__bg-text preloader__bg-text--code">09.03.01</span>
+        <span class="preloader__bg-text preloader__bg-text--it">IT</span>
+
+        <!-- Угловые скобки -->
+        <div class="preloader__corner preloader__corner--tl"></div>
+        <div class="preloader__corner preloader__corner--tr"></div>
+        <div class="preloader__corner preloader__corner--bl"></div>
+        <div class="preloader__corner preloader__corner--br"></div>
+
+        <!-- Световые орбы -->
+        <div class="preloader__orb preloader__orb--1"></div>
+        <div class="preloader__orb preloader__orb--2"></div>
+        <div class="preloader__orb preloader__orb--3"></div>
+
+        <!-- Точечные сетки -->
+        <div class="preloader__dots preloader__dots--1"></div>
+        <div class="preloader__dots preloader__dots--2"></div>
+        <div class="preloader__dots preloader__dots--3"></div>
+
+        <!-- Плавающие кресты -->
+        <div class="preloader__cross preloader__cross--1"></div>
+        <div class="preloader__cross preloader__cross--2"></div>
+        <div class="preloader__cross preloader__cross--3"></div>
+
+        <!-- Ромбы -->
+        <div class="preloader__diamond preloader__diamond--1"></div>
+        <div class="preloader__diamond preloader__diamond--2"></div>
+        <div class="preloader__diamond preloader__diamond--3"></div>
+
+        <!-- Наклонные и вертикальные линии -->
+        <div class="preloader__line preloader__line--1"></div>
+        <div class="preloader__line preloader__line--2"></div>
+        <div class="preloader__line preloader__line--3"></div>
+        <div class="preloader__vline preloader__vline--1"></div>
+        <div class="preloader__vline preloader__vline--2"></div>
+        <div class="preloader__vline preloader__vline--3"></div>
+
+        <!-- Дополнительный декор у IT -->
+        <div class="preloader__cross preloader__cross--4"></div>
+        <div class="preloader__diamond preloader__diamond--4"></div>
+        <div class="preloader__diamond preloader__diamond--5"></div>
+
+    </div>
+
     <div class="preloader__content">
         <div class="preloader__logo">
             <span style="--i:0">Построим</span>
