Загрузочный экран финал

--- a/sections/preloader.html
+++ b/sections/preloader.html
@@ -50,6 +50,11 @@
         <div class="preloader__diamond preloader__diamond--4"></div>
         <div class="preloader__diamond preloader__diamond--5"></div>
 
+        <!-- Декор у 09.03.01 -->
+        <div class="preloader__code-decor preloader__code-decor--1"></div>
+        <div class="preloader__code-decor preloader__code-decor--2"></div>
+        <div class="preloader__code-decor preloader__code-decor--3"></div>
+
     </div>
 
     <div class="preloader__content">
