смена темы сверху

--- a/sections/nav.html
+++ b/sections/nav.html
@@ -16,6 +16,17 @@
             <li><a href="#curriculum">Учебный план</a></li>
             <li><a href="#career">Карьера</a></li>
         </ul>
+        <div class="theme-toggle" aria-label="Переключатель темы">
+            <button class="theme-toggle__btn active" data-theme="light" title="Светлая тема" aria-label="Светлая тема">
+                <svg class="icon" width="20" height="20" aria-hidden="true"><use href="assets/icons.svg#icon-sun"></use></svg>
+            </button>
+            <button class="theme-toggle__btn" data-theme="dark" title="Тёмная тема" aria-label="Тёмная тема">
+                <svg class="icon" width="20" height="20" aria-hidden="true"><use href="assets/icons.svg#icon-moon"></use></svg>
+            </button>
+            <button class="theme-toggle__btn" data-theme="accessible" title="Для слабовидящих" aria-label="Версия для слабовидящих">
+                <svg class="icon" width="20" height="20" aria-hidden="true"><use href="assets/icons.svg#icon-eye"></use></svg>
+            </button>
+        </div>
         <a href="https://narfu.ru/priem/" class="nav__cta btn btn--primary btn--small" target="_blank" rel="noopener">Подать заявку</a>
         <button class="nav__burger" aria-label="Меню">
             <span></span><span></span><span></span>
