--- a/sections/about.html
+++ b/sections/about.html
@@ -32,13 +32,13 @@
                     <div class="about__feature about__feature--with-image" data-feature="0">
                         <span class="card__icon-svg"><svg class="icon" width="20" height="20" aria-hidden="true"><use href="assets/icons.svg#icon-laptop"></use></svg></span>
                         <span class="about__feature-text">Современные лаборатории</span>
-                        <span class="about__feature-touch" aria-hidden="true"><svg class="icon" width="20" height="20"><use href="assets/icons.svg#icon-eye"></use></svg></span>
+                        <span class="about__feature-touch" aria-hidden="true"><svg class="icon icon--desktop" width="20" height="20"><use href="assets/icons.svg#icon-eye"></use></svg><svg class="icon icon--mobile" width="20" height="20"><use href="assets/icons.svg#icon-click"></use></svg></span>
                     </div>
                     <!-- Реальные проекты -->
                     <div class="about__feature about__feature--with-image" data-feature="1">
                         <span class="card__icon-svg"><svg class="icon" width="20" height="20" aria-hidden="true"><use href="assets/icons.svg#icon-globe"></use></svg></span>
                         <span class="about__feature-text">Реальные проекты</span>
-                        <span class="about__feature-touch" aria-hidden="true"><svg class="icon" width="20" height="20"><use href="assets/icons.svg#icon-eye"></use></svg></span>
+                        <span class="about__feature-touch" aria-hidden="true"><svg class="icon icon--desktop" width="20" height="20"><use href="assets/icons.svg#icon-eye"></use></svg><svg class="icon icon--mobile" width="20" height="20"><use href="assets/icons.svg#icon-click"></use></svg></span>
                     </div>
                 </div>
             </div>
