--- a/sections/career.html
+++ b/sections/career.html
@@ -19,16 +19,16 @@
         <div class="career__companies reveal">
             <h3>Где работают наши выпускники</h3>
             <div class="career__logos">
-                <div class="career__logo-slot" aria-label="Логотип Севмаш"><svg class="icon" width="24" height="24" aria-hidden="true"><use href="assets/icons.svg#icon-camera"></use></svg></div>
-                <div class="career__logo-slot" aria-label="Логотип Звёздочка"><svg class="icon" width="24" height="24" aria-hidden="true"><use href="assets/icons.svg#icon-camera"></use></svg></div>
-                <div class="career__logo-slot" aria-label="Логотип Арктика"><svg class="icon" width="24" height="24" aria-hidden="true"><use href="assets/icons.svg#icon-camera"></use></svg></div>
-                <div class="career__logo-slot" aria-label="Логотип Яндекс"><svg class="icon" width="24" height="24" aria-hidden="true"><use href="assets/icons.svg#icon-camera"></use></svg></div>
-                <div class="career__logo-slot" aria-label="Логотип VK"><svg class="icon" width="24" height="24" aria-hidden="true"><use href="assets/icons.svg#icon-camera"></use></svg></div>
-                <div class="career__logo-slot" aria-label="Логотип Сбер"><svg class="icon" width="24" height="24" aria-hidden="true"><use href="assets/icons.svg#icon-camera"></use></svg></div>
-                <div class="career__logo-slot" aria-label="Логотип Тинькофф"><svg class="icon" width="24" height="24" aria-hidden="true"><use href="assets/icons.svg#icon-camera"></use></svg></div>
-                <div class="career__logo-slot" aria-label="Логотип Ростелеком"><svg class="icon" width="24" height="24" aria-hidden="true"><use href="assets/icons.svg#icon-camera"></use></svg></div>
-                <div class="career__logo-slot" aria-label="Логотип 1С"><svg class="icon" width="24" height="24" aria-hidden="true"><use href="assets/icons.svg#icon-camera"></use></svg></div>
-                <div class="career__logo-slot" aria-label="Логотип МТС"><svg class="icon" width="24" height="24" aria-hidden="true"><use href="assets/icons.svg#icon-camera"></use></svg></div>
+                <div class="career__logo-slot" aria-label="Логотип Яндекс"><img src="assets/images/logos/yandex.png" alt="Яндекс"></div>
+                <div class="career__logo-slot" aria-label="Логотип VK"><img src="assets/images/logos/vk.png" alt="VK"></div>
+                <div class="career__logo-slot" aria-label="Логотип Севмаш"><img src="assets/images/logos/sevmash.png" alt="Севмаш"></div>
+                <div class="career__logo-slot" aria-label="Логотип Сбер"><img src="assets/images/logos/sber.jpg" alt="Сбер"></div>
+                <div class="career__logo-slot" aria-label="Логотип Арктика"><img src="assets/images/logos/arktika.jpg" alt="Арктика"></div>
+                <div class="career__logo-slot" aria-label="Логотип Т-Банк"><img src="assets/images/logos/t-bank.png" alt="Т-Банк"></div>
+                <div class="career__logo-slot" aria-label="Логотип Звёздочка"><img src="assets/images/logos/zvezdochka.png" alt="Звёздочка"></div>
+                <div class="career__logo-slot" aria-label="Логотип Ростелеком"><img src="assets/images/logos/rostelekom.png" alt="Ростелеком"></div>
+                <div class="career__logo-slot" aria-label="Логотип 1С"><img src="assets/images/logos/1s.png" alt="1С"></div>
+                <div class="career__logo-slot" aria-label="Логотип МТС"><img src="assets/images/logos/mts.jpg" alt="МТС"></div>
             </div>
         </div>
 
