Учебный план - добавил описания и теги

--- a/sections/curriculum.html
+++ b/sections/curriculum.html
@@ -80,11 +80,11 @@
                                     <div class="curr-card">
                                         <span class="curr-card__num">05</span>
                                         <h4 class="curr-card__title">Информационные технологии</h4>
-                                        <p class="curr-card__desc">2D/3D графика, визуализация данных и основы компьютерного зрения</p>
+                                        <p class="curr-card__desc">Архитектура ПК, основы сетей, офисные системы и цифровая грамотность в профессиональной среде</p>
                                         <div class="curr-card__tags">
-                                            <span class="curr-card__tag">2D / 3D</span>
-                                            <span class="curr-card__tag">OpenGL</span>
-                                            <span class="curr-card__tag">ComputerVision</span>
+                                            <span class="curr-card__tag">Архитектура ПК</span>
+                                            <span class="curr-card__tag">Сети</span>
+                                            <span class="curr-card__tag">Цифровая грамотность</span>
                                         </div>
                                     </div>
                                 </div>
@@ -129,8 +129,8 @@
                                         <p class="curr-card__desc">UML, CASE-средства, моделирование архитектуры информационных систем</p>
                                         <div class="curr-card__tags">
                                             <span class="curr-card__tag">UML</span>
-                                            <span class="curr-card__tag">-</span>
-                                            <span class="curr-card__tag">-</span>
+                                            <span class="curr-card__tag">CASE-средства</span>
+                                            <span class="curr-card__tag">Архитектура ИС</span>
                                         </div>
                                     </div>
                                 </div>
@@ -174,7 +174,7 @@
                                     <div class="curr-card">
                                         <span class="curr-card__num">06</span>
                                         <h4 class="curr-card__title">Моделирование деловых процессов</h4>
-                                        <p class="curr-card__desc">-</p>
+                                        <p class="curr-card__desc">Анализ и оптимизация бизнес-процессов с помощью нотаций моделирования и CASE-инструментов</p>
                                         <div class="curr-card__tags">
                                             <span class="curr-card__tag">BPMN</span>
                                             <span class="curr-card__tag">IDEF0</span>
@@ -186,11 +186,11 @@
                                     <div class="curr-card">
                                         <span class="curr-card__num">07</span>
                                         <h4 class="curr-card__title">Прикладное программирование информационных систем</h4>
-                                        <p class="curr-card__desc">-</p>
+                                        <p class="curr-card__desc">Разработка клиент-серверных приложений, работа с СУБД и создание пользовательских интерфейсов</p>
                                         <div class="curr-card__tags">
-                                            <span class="curr-card__tag">-</span>
-                                            <span class="curr-card__tag">-</span>
-                                            <span class="curr-card__tag">-</span>
+                                            <span class="curr-card__tag">C#</span>
+                                            <span class="curr-card__tag">.NET</span>
+                                            <span class="curr-card__tag">GUI</span>
                                         </div>
                                     </div>
                                 </div>
@@ -271,7 +271,7 @@
                                     <div class="curr-card">
                                         <span class="curr-card__num">06</span>
                                         <h4 class="curr-card__title">Инженерия эксперимента</h4>
-                                        <p class="curr-card__desc">Планирование экспериментов, разработки и принятие решений</p>
+                                        <p class="curr-card__desc">Планирование экспериментов, разработка и принятие решений</p>
                                         <div class="curr-card__tags">
                                             <span class="curr-card__tag">Big Data</span>
                                             <span class="curr-card__tag">Эксперимент</span>
@@ -295,12 +295,11 @@
                                     <div class="curr-card">
                                         <span class="curr-card__num">08</span>
                                         <h4 class="curr-card__title">Теория риска</h4>
-                                        <p class="curr-card__desc">-</p>
+                                        <p class="curr-card__desc">Оценка и управление рисками в IT-проектах, моделирование угроз и стратегии их минимизации</p>
                                         <div class="curr-card__tags">
-                                            <span class="curr-card__tag">-</span>
-                                            <span class="curr-card__tag">-</span>
-                                            <span class="curr-card__tag">-</span>
-                                            <span class="curr-card__tag">-</span>
+                                            <span class="curr-card__tag">Риск-менеджмент</span>
+                                            <span class="curr-card__tag">Моделирование</span>
+                                            <span class="curr-card__tag">Анализ угроз</span>
                                         </div>
                                     </div>
                                 </div>
@@ -343,11 +342,11 @@
                                     <div class="curr-card">
                                         <span class="curr-card__num">03</span>
                                         <h4 class="curr-card__title">Проектирование и разработка информационных систем</h4>
-                                        <p class="curr-card__desc">-</p>
+                                        <p class="curr-card__desc">Полный цикл создания ИС: сбор требований, проектирование архитектуры, разработка и развёртывание</p>
                                         <div class="curr-card__tags">
-                                            <span class="curr-card__tag">-</span>
-                                            <span class="curr-card__tag">-</span>
-                                            <span class="curr-card__tag">-</span>
+                                            <span class="curr-card__tag">Архитектура</span>
+                                            <span class="curr-card__tag">Требования</span>
+                                            <span class="curr-card__tag">Паттерны</span>
                                         </div>
                                     </div>
                                 </div>
@@ -367,11 +366,11 @@
                                     <div class="curr-card">
                                         <span class="curr-card__num">05</span>
                                         <h4 class="curr-card__title">Производственная практика</h4>
-                                        <p class="curr-card__desc">-</p>
+                                        <p class="curr-card__desc">Стажировка в IT-компании, работа над реальными задачами в команде профессионалов</p>
                                         <div class="curr-card__tags">
-                                            <span class="curr-card__tag">-</span>
-                                            <span class="curr-card__tag">-</span>
-                                            <span class="curr-card__tag">-</span>
+                                            <span class="curr-card__tag">Стажировка</span>
+                                            <span class="curr-card__tag">Реальные задачи</span>
+                                            <span class="curr-card__tag">Портфолио</span>
                                         </div>
                                     </div>
                                 </div>
