--- a/sections/footer.html
+++ b/sections/footer.html
@@ -42,11 +42,7 @@
             </div>
             <div class="footer__brand">
                 <a href="https://narfu.ru/sf/" class="nav__logo" target="_blank" rel="noopener">
-                    <img src="assets/images/logo-safu.png" alt="Логотип САФУ" class="nav__logo-img" onerror="this.style.display='none'">
-                    <div class="nav__logo-text">
-                        САФУ
-                        <span>Северодвинск</span>
-                    </div>
+                    <img src="assets/images/logos/fil safu.png" alt="Логотип филиала САФУ" class="nav__logo-img">
                 </a>
                 <p>Северный (Арктический) федеральный университет имени М.В. Ломоносова. Северодвинский филиал (Севмашвтуз).</p>
             </div>
