--- a/sections/nav.html
+++ b/sections/nav.html
@@ -2,12 +2,7 @@
 <nav class="nav">
     <div class="nav__container">
         <a href="https://narfu.ru/sf/" class="nav__logo" target="_blank" rel="noopener">
-            <!-- Путь к логотипу: assets/images/logo-safu.png -->
-            <img src="assets/images/logo-safu.png" alt="Логотип САФУ" class="nav__logo-img" onerror="this.style.display='none'">
-            <div class="nav__logo-text">
-                САФУ
-                <span>Северодвинск</span>
-            </div>
+            <img src="assets/images/logos/ismart.png" alt="Логотип iSmart САФУ" class="nav__logo-img">
         </a>
         <ul class="nav__links">
             <li><a href="#about">О направлении</a></li>
